[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/respawn_timer_ui.gd" type="Script" id=1]

[node name="respawn_timer_ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.701961 )
anchor_right = 1.0
anchor_bottom = 0.107
margin_bottom = -0.200005
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel2" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.701961 )
anchor_top = 0.867
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 7.79999
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timer_spawn_lbl" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.107
margin_bottom = -0.200005
text = "Respawn time"
align = 1
valign = 1
uppercase = true

[node name="respawn_time" type="Timer" parent="."]
process_mode = 0

[connection signal="timeout" from="respawn_time" to="." method="_on_respawn_time_timeout"]
